--- a/test.html
+++ b/test.html
@@ -3,12 +3,13 @@
 <head>
 <link rel="stylesheet" type="text/css" href="theme.css">
 <link rel="stylesheet" type="text/css" href="button.css">
+<link rel="stylesheet" type="text/css" href="font.css">
 <script type="text/javascript" src="dicegame.js"></script>
 	<title>LETS PLAY A GAME</title>
 </head>
 <body>
 <center>
-	<h1> Welcome to Knock Out </h1>
+	<h1 class="titleHeader"> Welcome to Knock Out </h1>
 	<h2> Rules: </h2>
 	<h3>1.  Any die 10 or over has negative effects if you roll under a certain value.</h3>
 	<h3>2.  Try to get to 40 points in the least turns possible!</h3>
